--- a/nglview/tests/notebooks/api/test_app_layout.ipynb
+++ b/nglview/tests/notebooks/api/test_app_layout.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipywidgets import *\n",
     "import nglview as nv\n",
-    "from nglview.widget_box import *\n",
     "\n",
     "v0 = nv.demo()\n",
     "v1 = nv.demo()\n",
@@ -16,15 +15,15 @@
     "v3 = nv.demo()\n",
     "p1 = v1.player._make_repr_playground()\n",
     "p0 = v0.player._make_repr_playground()\n",
-    "pb0 = GridBoxNGL(p0.children)\n",
+    "pb0 = GridBox(p0.children)\n",
     "pb0.layout.grid_template_columns= 'auto auto auto'\n",
     "pb0.layout.width = '50%'\n",
-    "pb1 = GridBoxNGL(p1.children)\n",
+    "pb1 = GridBox(p1.children)\n",
     "pb1.layout.grid_template_columns= 'auto auto auto'\n",
     "pb1.layout.width = '50%'\n",
-    "repr_grid = GridBoxNGL(p0.children)\n",
+    "repr_grid = GridBox(p0.children)\n",
     "repr_grid.layout.grid_template_columns = '150px 150px'\n",
-    "b = GridBoxNGL([v0, v1, v2, v3],\n",
+    "b = GridBox([GridBox([v0]), v1, v2, v3],\n",
     "               layout=Layout(grid_template_columns='50% 50%'))\n",
     "v0.player._create_all_widgets()\n",
     "header = Dropdown(options=['a', 'b'], value='a')\n",
@@ -38,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8899856b5bd4414d8111b1ab0f08017b",
+       "model_id": "3e16a890fdd144158b026f5b3bfda2d0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayoutNGL(children=(HBox(children=(GridBoxNGL(children=(ToggleButton(value=False, description='axes'), Togg…"
+       "AppLayout(children=(HBox(children=(GridBox(children=(ToggleButton(value=False, description='axes'), ToggleButt…"
       ]
      },
      "metadata": {},
@@ -57,7 +56,7 @@
     }
    ],
    "source": [
-    "b2 = AppLayoutNGL(\n",
+    "b2 = AppLayout(\n",
     "    center=b,\n",
     "    header=HBox([pb0, pb1]),\n",
     "    footer=None,\n",
@@ -68,23 +67,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b2._js(\"this.el.style.background = 'white'\")\n",
-    "for pb in [pb0, pb1]:\n",
-    "    for kid in pb.children:\n",
-    "        kid.layout.border = 'green solid 1px'"
+    "for v in [v0, v1, v2, v3]:\n",
+    "    v.handle_resize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0641a75207104bafa31685fbd8a92663",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fullscreen()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from nglview.widget import Fullscreen\n",
+    "\n",
+    "fs = Fullscreen(b2, [v0, v1, v2, v3])\n",
+    "fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b2.fullscreen()"
+    "fs.fullscreen()"
    ]
   }
  ],
