--- a/nglview/tests/notebooks/api/test_grid_view_sync_camera.ipynb
+++ b/nglview/tests/notebooks/api/test_grid_view_sync_camera.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f77bcd0cd3f4b41b216726561c4eb06",
+       "model_id": "4b52417a846a4af98bb2022fb4cb0c15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,12 +22,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0710baa4c21049cd9a55516225dcd845",
+       "model_id": "feafd384cbfc47068eb315999fdf42b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridBox(children=(NGLWidget(), NGLWidget()), layout=Layout(grid_template_columns='40% 60%'))"
+       "GridBox(children=(GridBox(children=(NGLWidget(),)), GridBox(children=(NGLWidget(),))), layout=Layout(grid_temp…"
       ]
      },
      "metadata": {},
@@ -44,16 +44,16 @@
     "v1 = nv.show_pdbid('4HHB', default=False)\n",
     "v1.add_ball_and_stick('148:D')\n",
     "v1.center('148:D')\n",
-    "b = GridBox([v1, v])\n",
-    "b.layout.grid_template_columns = '40% 60%'\n",
-    "fs = Fullscreen(b, b.children)\n",
+    "b = GridBox([GridBox([v1]), GridBox([v])])\n",
+    "b.layout.grid_template_columns = '50% 50%'\n",
+    "fs = Fullscreen(b, [v, v1])\n",
     "display(fs)\n",
     "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.layout.height = '400px'"
+    "b.layout.height = '600px'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v._set_sync_camera([v1])"
+    "v._set_sync_camera([v1])\n",
+    "v1._set_sync_camera([v])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1.gui_style = 'ngl'"
    ]
   }
  ],
