--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d79bf9db943415a9643a184f598a8c7",
+       "model_id": "7f828c6758804b6abb8cfa9b4e4b1a59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3df437b63bd34143afbd939b3f6e841b",
+       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,6 +45,7 @@
     "app = GridBox([v, s])\n",
     "app.layout.grid_template_columns = 'auto 350px'\n",
     "def on_displayed(app):\n",
+    "    v.handle_resize()\n",
     "    v._execute_js_code(\"\"\"\n",
     "\n",
     "    var cviews = this.options.parent.children_views.views\n",
@@ -66,13 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3df437b63bd34143afbd939b3f6e841b",
+       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(NGLWidget(n_components=1), Sidebar()), layout=Layout(grid_template_columns='auto 350px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
        "version_major": 2,
        "version_minor": 0
       },
