--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f828c6758804b6abb8cfa9b4e4b1a59",
+       "model_id": "c70b251f72e7480cac1683e36b0f3880",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
+       "model_id": "e769b573392549dbbe7a0450b95c87bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,42 +67,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "GridBox(children=(NGLWidget(n_components=1), Sidebar()), layout=Layout(grid_template_columns='auto 350px'))"
+       "0"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "app"
+    "v.n_components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.layout.grid_template_columns = 'auto 250px'\n",
+    "v.handle_resize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6ac4751eaf4b0280b54109410d49e5",
+       "model_id": "635f8854148a4fdda9311b60e570ec27",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridBox(children=(NGLWidget(n_components=1), Sidebar()), layout=Layout(grid_template_columns='auto 350px'))"
+       "Fullscreen()"
       ]
      },
      "metadata": {},
@@ -110,7 +116,66 @@
     }
    ],
    "source": [
-    "app"
+    "fs = nv.widget.Fullscreen(app, [v])\n",
+    "fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.fullscreen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = app.add_class(\"nglview-app\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "407dc04adc0449cbab724750cda8e57f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n.nglview-app{\\n    background: white\\n}\\n</style>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = HTML(\"\"\"\n",
+    "<style>\n",
+    ".nglview-app{\n",
+    "    background: white\n",
+    "}\n",
+    "</style>\n",
+    "\"\"\")\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.close()"
    ]
   }
  ],
