--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c70b251f72e7480cac1683e36b0f3880",
+       "model_id": "3b6909b67d58484a8a9afb6b4b323257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,12 +22,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e769b573392549dbbe7a0450b95c87bf",
+       "model_id": "0f825e7489f645d789926e50051d7f93",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridBox(children=(NGLWidget(), Sidebar()), layout=Layout(grid_template_columns='auto 350px'))"
+       "HTML(value='\\n<style>\\n.nglview-app{\\n    background: white\\n}\\n</style>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a15e5c563a443d29bf67b2dad147389",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Sidebar(), NGLWidget()), layout=Layout(grid_template_columns='350px auto'), _dom_classes=('n…"
       ]
      },
      "metadata": {},
@@ -42,16 +56,16 @@
     "v = nv.demo()\n",
     "s = nv.widget.Sidebar(v.model_id)\n",
     "display(s)\n",
-    "app = GridBox([v, s])\n",
-    "app.layout.grid_template_columns = 'auto 350px'\n",
+    "app = GridBox([s, v])\n",
+    "app.layout.grid_template_columns = '350px auto'\n",
     "def on_displayed(app):\n",
     "    v.handle_resize()\n",
     "    v._execute_js_code(\"\"\"\n",
     "\n",
     "    var cviews = this.options.parent.children_views.views\n",
     "    console.log(cviews)\n",
-    "    var view = cviews[0]\n",
-    "    var sidebar = cviews[1]\n",
+    "    var view = cviews[1]\n",
+    "    var sidebar = cviews[0]\n",
     "    Promise.all([view, sidebar]).then((all) =>{\n",
     "        var v = all[0]\n",
     "        var s = all[1]\n",
@@ -62,48 +76,28 @@
     "    })\n",
     "    \"\"\")\n",
     "app.on_displayed(on_displayed)\n",
+    "_ = app.add_class(\"nglview-app\")\n",
+    "display(HTML(\"\"\"\n",
+    "<style>\n",
+    ".nglview-app{\n",
+    "    background: white\n",
+    "}\n",
+    "</style>\n",
+    "\"\"\"))\n",
     "app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "v.n_components"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app.layout.grid_template_columns = 'auto 250px'\n",
-    "v.handle_resize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "635f8854148a4fdda9311b60e570ec27",
+       "model_id": "4118fc04e9044f4a9c2d13199bb6a587",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,60 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs.fullscreen()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = app.add_class(\"nglview-app\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "407dc04adc0449cbab724750cda8e57f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>\\n.nglview-app{\\n    background: white\\n}\\n</style>\\n')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "x = HTML(\"\"\"\n",
-    "<style>\n",
-    ".nglview-app{\n",
-    "    background: white\n",
-    "}\n",
-    "</style>\n",
-    "\"\"\")\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.close()"
+    "fs.fullscreen()"
    ]
   }
  ],
