--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,52 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b6909b67d58484a8a9afb6b4b323257",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sidebar()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f825e7489f645d789926e50051d7f93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>\\n.nglview-app{\\n    background: white\\n}\\n</style>\\n')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a15e5c563a443d29bf67b2dad147389",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridBox(children=(Sidebar(), NGLWidget()), layout=Layout(grid_template_columns='350px auto'), _dom_classes=('n…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nglview as nv\n",
     "from ipywidgets import *\n",
@@ -70,9 +27,7 @@
     "        var v = all[0]\n",
     "        var s = all[1]\n",
     "        console.log(v, s)\n",
-    "        if (!s.sidebar.stage){\n",
-    "            s.sidebar.setStage(v.stage)\n",
-    "        }\n",
+    "        s.setStage(v.stage)\n",
     "    })\n",
     "    \"\"\")\n",
     "app.on_displayed(on_displayed)\n",
@@ -89,26 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4118fc04e9044f4a9c2d13199bb6a587",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fullscreen()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fs = nv.widget.Fullscreen(app, [v])\n",
     "fs"
@@ -116,11 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fs.fullscreen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    v._execute_js_code(\"\"\"\n",
+    "\n",
+    "    var cviews = this.options.parent.children_views.views\n",
+    "    console.log(cviews)\n",
+    "    var view = cviews[1]\n",
+    "    var sidebar = cviews[0]\n",
+    "    Promise.all([view, sidebar]).then((all) =>{\n",
+    "        var v = all[0]\n",
+    "        var s = all[1]\n",
+    "        console.log(v, s)\n",
+    "        s.setStage(v.stage)\n",
+    "    })\n",
+    "    \"\"\")"
    ]
   }
  ],
