FIX: make sure player displayed correctly in embed mode

--- a/nglview/tests/notebooks/api/test_add_shape.ipynb
+++ b/nglview/tests/notebooks/api/test_add_shape.ipynb
@@ -10,7 +10,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d146880326a84bfea403085dbd6e12c8",
+       "model_id": "c89882fb09a94a6084f04a619662f7e4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4b8670d54994f399b79f02b011d72b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d146880326a84bfea403085dbd6e12c8",
+       "model_id": "e4b8670d54994f399b79f02b011d72b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,13 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea855b30b4104300a365f377967812ec",
+       "model_id": "27a15d349a9242aebed4a99dc815dcb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,6 +161,13 @@
     " 1])\n",
     "view2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
