--- a/nglview/tests/notebooks/api/test_app_layout.ipynb
+++ b/nglview/tests/notebooks/api/test_app_layout.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33d5ab58d9c24bef950c828a0209ebc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import *\n",
     "import nglview as nv\n",
@@ -43,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f4691ef890c4edcb43722c6ba40f08c",
+       "model_id": "a2712c7cb44f451daf624ace28619ba4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a19b25d2fcde4de188e6ac5545f44efc",
+       "model_id": "c3997c63208a49b591b65853a790d0b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
