--- a/nglview/tests/notebooks/api/test_display_same_view_several_times.ipynb
+++ b/nglview/tests/notebooks/api/test_display_same_view_several_times.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nglview\n",
     "from nglview.utils import get_colors_from_b64"
@@ -14,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05faa34530e74f17b12a8ef8f829e6ad",
+       "model_id": "1822bfea86fc4ce096a45bea1337bbb9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget()"
       ]
      },
      "metadata": {},
@@ -95,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
