--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -8,7 +8,34 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2983123aa06548fc8aa6949f05e67b42",
+       "model_id": "fc5d64e3d38d43338c7dd6650d37b541",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import nglview as nv\n",
+    "\n",
+    "view = nv.demo()\n",
+    "view.gui_style = 'ngl'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39441abe6f484916ba75b802aaf70369",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,10 +48,6 @@
     }
    ],
    "source": [
-    "import nglview as nv\n",
-    "\n",
-    "view = nv.demo()\n",
-    "view.gui_style = 'ngl'\n",
     "view"
    ]
   }
