--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc5d64e3d38d43338c7dd6650d37b541",
+       "model_id": "810708de4d514e6db720952436f2f60e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -18,24 +18,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import nglview as nv\n",
-    "\n",
-    "view = nv.demo()\n",
-    "view.gui_style = 'ngl'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39441abe6f484916ba75b802aaf70369",
+       "model_id": "d4749a13500a429e92e6137a70f7bf85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05bbe9a13dda4d9092bec18d53dbc62b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +49,20 @@
     }
    ],
    "source": [
+    "import nglview as nv\n",
+    "\n",
+    "view = nv.demo()\n",
+    "view.gui_style = 'ngl'\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view._widget_theme.dark()"
    ]
   }
  ],
