--- a/nglview/tests/notebooks/api/test_custom_color.ipynb
+++ b/nglview/tests/notebooks/api/test_custom_color.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3da2cbe4c62540008e58d7acf68b6510",
+       "model_id": "19f93e0172d34a3aa5eb546ea815a8c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df38e210cea04bdc9dca1000ab54ff46",
+       "model_id": "a1f2d64010bf4b5fa7bf988a1fdddff8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "511c1273765047d680a6bd87462ba735",
+       "model_id": "becfed0464a34621a4581a629bc54af8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,6 +512,7 @@
            "depthWrite": true,
            "diffuse": 16777215,
            "diffuseInterior": false,
+           "disableImpostor": false,
            "disablePicking": false,
            "flatShaded": false,
            "interiorColor": 2236962,
@@ -552,6 +553,7 @@
            "subdiv": 6,
            "tension": null,
            "useInteriorColor": true,
+           "useWorker": true,
            "visible": true,
            "wireframe": false
           },
@@ -562,7 +564,8 @@
        "_ngl_serialize": false,
        "_ngl_version": "2.0.0-dev.36",
        "_ngl_view_id": [
-        "3bbc174a-dcb1-4787-9d51-33e6fec78643"
+        "3bbc174a-dcb1-4787-9d51-33e6fec78643",
+        "43ADB8AF-61F4-4E8D-A3CC-7B5F8BDAB0EF"
        ],
        "_player_dict": {},
        "_scene_position": {},
@@ -901,6 +904,7 @@
            "depthWrite": true,
            "diffuse": 16777215,
            "diffuseInterior": false,
+           "disableImpostor": false,
            "disablePicking": false,
            "flatShaded": false,
            "interiorColor": 2236962,
@@ -941,6 +945,7 @@
            "subdiv": 6,
            "tension": null,
            "useInteriorColor": true,
+           "useWorker": true,
            "visible": true,
            "wireframe": false
           },
@@ -951,7 +956,8 @@
        "_ngl_serialize": false,
        "_ngl_version": "2.0.0-dev.36",
        "_ngl_view_id": [
-        "addc2895-4469-41da-955d-50038f3c6c7a"
+        "addc2895-4469-41da-955d-50038f3c6c7a",
+        "E21B5CC6-8C27-4B73-A765-0D68844BE0CD"
        ],
        "_player_dict": {},
        "_scene_position": {},
