--- a/nglview/tests/notebooks/api/test_add_shape.ipynb
+++ b/nglview/tests/notebooks/api/test_add_shape.ipynb
@@ -2,11 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c08126015629418eba171f2f5776de85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4115b6eea19844a2879e7a8b3d7a69ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "from nglview.utils import get_colors_from_b64\n",
@@ -37,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4b8670d54994f399b79f02b011d72b0",
+       "model_id": "4115b6eea19844a2879e7a8b3d7a69ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27a15d349a9242aebed4a99dc815dcb3",
+       "model_id": "917f48122d844288b8b94b2054fdf916",
        "version_major": 2,
        "version_minor": 0
       },
